# violin-tool

./: .gitignore  CLAUDE.md  andrew_ng_agentic_ai_reference.md  tmp.txt
.claude/: settings.local.json
.superpowers/brainstorm/425-1778914341/content/: agent-architecture.html  architecture-v2.html  architecture-v3-gap-analysis.html  feature-brainstorm.html  tech-stack.html
.superpowers/brainstorm/425-1778914341/state/: server-info
docs/errors/0520/: 1446.md
docs/errors/0521/: 1627.md
docs/research/0521/: tuner_ui_architecture.html  音高.md
docs/superpowers/plans/: 2026-05-16-plan-1-project-scaffold.md  2026-05-20-plan-2a-audio-engine-ffi.md  2026-05-22-plan-3-sheet-music.md
docs/superpowers/specs/: 2026-05-16-violin-practice-app-design.md  2026-05-20-plan-2a-audio-engine-ffi-design.md  2026-05-22-plan-3-sheet-music-design.md
violin_app/: analysis_options.yaml  package-lock.json  package.json  pubspec.yaml
violin_app/android/app/: build.gradle.kts
violin_app/assets/osmd/: sheet_viewer.html
violin_app/assets/sheet_music/: twinkle_twinkle.musicxml
violin_app/lib/: app.dart  main.dart
violin_app/lib/core/plugin/: plugin_action.dart  plugin_context.dart  plugin_registry.dart  tool_plugin.dart
violin_app/lib/core/routing/: app_router.dart
violin_app/lib/core/services/: audio_engine.dart  audio_engine_stub.dart  database_service.dart  llm_client.dart  providers.dart  trace_logger.dart
violin_app/lib/core/theme/: app_colors.dart  app_theme.dart
violin_app/lib/features/home/: home_page.dart
violin_app/lib/ffi/: audio_bridge.dart
violin_app/native/: CMakeLists.txt
violin_app/native/include/: ring_buffer.h
violin_app/native/src/: audio_bridge.cpp  metronome_engine.cpp  ring_buffer.cpp  yin_pitch.cpp
violin_app/native/src/platform/: audio_android.cpp  audio_windows.cpp
violin_app/native/test/: CMakeLists.txt  metronome_engine_test.cpp  ring_buffer_test.cpp  yin_pitch_test.cpp
violin_app/test/manual/: ping_test.dart
violin_app/test/test_utils/: mock_plugin.dart  test_app.dart
violin_app/windows/: CMakeLists.txt
violin_app/windows/runner/: Runner.rc  main.cpp
(+32 files in other folders)
